src/objects/Outbound_SMS__c.object
<CustomObject>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_SMS_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SMS Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Outbound SMS</label>
    <nameField>
        <displayFormat>OutboundSMS-{00000000}</displayFormat>
        <label>Outbound SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>